--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
  20px rgba(0, 0, 0, 0.1);
             padding: 12px;
             position: relative;
+            /* ВИПРАВЛЕННЯ: ЗАПОБІГАННЯ ЗУМУ */
+            touch-action: manipulation;
         }
         .main-view {
              transition: opacity 0.3s ease;
@@ -118,7 +120,7 @@
             bottom: 0;
             left: 0;
             right: 0;
-            height: 80px;
+            height: 85px; /* Збільшено з 80px */
             border-top: 4px solid #ffd200;
             box-shadow: 0 -5px 15px rgba(255, 210, 0, 0.2);
             display: flex;
@@ -127,10 +129,12 @@
             padding: 5px;
             background-color: #ffffff;
             z-index: 10; /* Барабани поверх зони влучання */
+            /* ВИПРАВЛЕННЯ: ЗАПОБІГАННЯ ЗУМУ */
+            touch-action: manipulation; 
         }
         .drum-pad {
-            width: 60px;
-            height: 60px;
+            width: 64px; /* Збільшено з 60px */
+            height: 64px; /* Збільшено з 60px */
             border-radius: 50%;
             display: flex;
             flex-direction: column;
@@ -140,6 +144,8 @@
             transition: transform 0.1s ease-in-out, background-color 0.1s ease-in-out, box-shadow 0.1s ease;
             color: white;
             font-weight: 700;
+            /* ВИПРАВЛЕННЯ: ЗАПОБІГАННЯ ЗУМУ */
+            touch-action: manipulation; 
         }
         .drum-pad .drum-name { font-size: 0.7rem; }
         .drum-pad .key-hint { font-size: 0.6rem; opacity: 0.7; }
@@ -157,7 +163,7 @@
             font-size: 0.875rem;
             font-weight: 600; cursor: pointer;
             background-color: #ffd200; color: #1e293b; border: none;
-            box-shadow: 0 0 4px rgba(0,0,0,0.1);
+            box-shadow: 0 4px rgba(0,0,0,0.1);
         }
         .pro-button:hover:not(:disabled) { background-color: #e6be00; }
         .pro-button:disabled { opacity: 0.6; cursor: not-allowed; }
