--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- ДОДАНО FAVICON -->
-    
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://github.com/max-vorozhko/rankova_studio_drum_falling_notes/blob/main/favicon.png?raw=true">
     <style>
         body {
             font-family: 'Inter', sans-serif;
